package app

type Shape interface {
	Draw()
}
