package core

type ShapeType string
