package factory

import (
	"github.com/babakgh/kata/design_patterns/abstract_factory/go/pkg/core"
)

type ShapeFactoryV1 struct {
	*core.BaseShapeFactory
}
