package factory

import (
	"github.com/babakgh/kata/design_patterns/abstract_factory/go/pkg/core"
)

type ShapeFactoryV2 struct {
	*core.BaseShapeFactory
}
